# actix-clean-architecture

./: Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs  service_resolver.rs  user_controller.rs
src/api/model/: create_user_input_model.rs  create_user_output_model.rs  get_user_output_model.rs  mod.rs  user_input_model.rs  user_output_model.rs
src/infra/adapter/: mod.rs  user_repository.rs
src/infra/adapter/entity/: user_entity.rs
src/kore/models/: create_user_output_dto.rs  get_user_output_dto.rs  mod.rs  user_input_dto.rs  user_output_dto.rs
src/kore/ports/: mod.rs  user_repository_port.rs
src/kore/service/: mod.rs  user_service.rs
