[package]
name = "actix-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.0"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.3.0"
dotenv = "0.15.0"
async-trait = "0.1.63"